# g815-driver

./: .gitignore  Cargo.toml  README.md  build.rs  config.default.yml  config.json  config.yaml  protocol-notes.txt
src/: config.rs  dbus.rs  dbusserver.rs  g815.rs  macros.rs  main.rs  media.rs  scancode.rs  x11i.rs
src/device/: color.rs  g815.rs  mod.rs  rgb.rs  scancode.rs  thread.rs
src/windowsystem/: mod.rs  x11.rs
