[package]
name = "g815-driver"
version = "0.1.0"
authors = ["Sam Lavers <sam@lave.rs>"]
edition = "2018"
build = "build.rs"

[dependencies]
x11 = "2.18"
hidapi = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
threadpool = "1.8"
enum_derive = "0.1"
macro-attr = "0.2"
ctrlc = "3.1"
regex = "1.0"
