[package]
name = "g815-driver"
version = "0.1.0"
authors = ["Sam Lavers <sam@lave.rs>"]
edition = "2018"
build = "build.rs"
default-run = "g815d"

[[bin]]
name = "g815d"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
hidapi = "1.2"
x11 = "2.18"
threadpool = "1.8"
enum_derive = "0.1"
macro-attr = "0.2"
ctrlc = { version = "3.1", features = ["termination"] }
regex = "1.0"
dbus = "0.8"
dbus-crossroads = "0.2"
notify = "4"
log = "0.4"
pretty_env_logger = "0.4"
crossbeam = "0.7"
